tests/type_check/pass/mod.rs
mod arithmetic;
mod comparison;
mod conditionals;
mod functions;
mod literals;
mod logic;
