tests/type_check/fail/mod.rs
mod arithmetic;
mod comparison;
mod conditionals;
mod functions;
mod logic;
mod variables;
